# terrain-gen

./: .gitignore  CMakeLists.txt  Makefile  README.md  README.txt  TODO.md
include/: camera.hpp  shader.hpp
include/glad/: glad.h
lib/win/: libglfw3.lib
src/: camera.cpp  glad.c  main.cpp  shader.cpp
src/shaders/noisegen/: noisegen.frag
src/shaders/screen/: screen.frag  screen.vert
src/shaders/terrain/: terrain.frag  terrain.geom  terrain.vert
src/shaders/test/: test.frag  test.vert
